# books.alexwlchan.net

./: .gitignore  .rubocop.yml  CHANGELOG.md  Caddyfile  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  _config.yml  _redirects  create_book_entry.py  front-matter.json  netlify.toml  netlify_deploy.sh  redirects.Caddyfile  requirements.in  requirements.txt  serve.sh
.github/workflows/: build.yml  build_site.yml  rubocop.yml  run_plugin_tests.yml  upload_binaries.yml
.netlify/: download_latest_version.py  install_vfd_and_build.py  state.json
bookish/: Cargo.toml
bookish/src/: add_review.rs  colours.rs  create_shelf.rs  fs_helpers.rs  main.rs  models.rs  render_html.rs  text.rs  urls.rs
jekyll/: Makefile  _config.yml
jekyll/other-times/: artemis-fowl-and-the-time-paradox.md  do-you-feel-lucky.md
jekyll/src/: reviews.html  reviews.md
new_templates/: base.html
old-rust/: models.rs  tags.rs
other-times/: agent-zigzag.md  artemis-fowl-and-the-lost-colony.md  artemis-fowl-and-the-opal-deception.md  artemis-fowl-eternity-cube.md  artemis-fowl-the-arctic-incident.md  artemis-fowl.md  cambridge-student-pranks.md  creativity-inc.md  double-cross.md  five-go-on-a-strategy-away-day.md  have-i-got-views-for-you.md  how-many-friends-does-one-person-need.md  in-god-we-doubt.md  inside-steves-brain.md  math-hysteria-fun-and-games-with-mathematics.md  mathematics-minus-fear.md  not-quite-human-bug-in-the-system.md  number-9.md  numbers.md  operation-mincemeat.md  space-stories-that-really-happened.md  the-end-of-harry-potter.md  the-phantom-x.md  the-sixth-form-at-st-clares.md  the-tales-of-beedle-the-bard.md  the-worst-case-scenario-survival-handbook-travel.md  the-worst-case-scenario-survival-handbook.md  the-worst-witch-all-at-sea.md  the-worst-witch.md  why-the-toast-always-lands-butter-side-down.md
reviews/2003/: harry-potter-and-the-order-of-the-phoenix.md
reviews/2005/: harry-potter-and-the-half-blood-prince.md
reviews/2007/: harry-potter-and-the-deathly-hallows.md
reviews/2011/: cryptography-a-very-short-introduction.md  enigma-the-battle-for-the-code.md  five-equations-that-changed-the-world.md  focus.md  how-many-lightbulbs-does-it-take-to-change-a-planet.md  march-hares-and-monkeys-uncles.md  the-last-little-blue-envelope.md  the-never-ending-days-of-being-dead.md  (+1 more)
scripts/: add_book.py  create_review.rb  deploy.sh  download_cover_image  generate_bookshelf.py  linter.rb  models.py  render_html.py  search_tags.rb  tint_colors.py
src/: _redirects  add_review.rs  backfill_tags.rs  colours.rs  create_favicon.rs  create_shelf.rs  errors.rs  fs_helpers.rs  index.html  index.md  main.rs  models.rs  render_html.rs  reviews.html  reviews.md  serve.rs  tags.rs  templates.rs  text_helpers.rs  tint_colors.json  urls.rs  version.rs
static/: filters.js  review_filters.js  style.css  test_review_filters.html  test_review_filters.js
templates/: _base.css  _book_cover.html  _contributor.html  _footer.html  _header.html  _inline_book_list.html  _review.css  _review_entry.html  _review_style.css  base.html  index.html  list_old_reviews.html  list_plans.html  list_reading.html  list_reviews.html  list_will_never_read.html  review.html
(+1848 files in other folders)
