[package]
name = "vfd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.2"
base64 = "0.13.0"
hotwatch = "0.4"
lazy_static = "1.4.0"
image = { version = "0.23", features = ["png"], default-features = false }
imageproc = "0.22.0"
oxipng = "5.0.1"
palette = "0.6"
phf = { version = "0.10", features = ["macros"] }
pulldown-cmark = "0.9.1"
rand = { version = "0.8.4", features = ["small_rng"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tera = "1.15.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["fs"] }
walkdir = "2"
