[package]
name = "bookish"
version = "1.0.0"
authors = ["Alex Chan <alex@alexwlchan.net>"]
edition = "2021"

[dependencies]
clap = "2.33"
imageproc = "0.22.0"
oxipng = "5.0.1"
palette = "0.5"
regex = "1"
unidecode = "0.3.0"

[dependencies.inquire]
version = "0.2.1"
features = ["date"]

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

[dependencies.reqwest]
version = "0.11.7"
features = ["blocking"]

[dependencies.image]
version = "0.23"
features = ["png"]
default-features = false
